{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "d8656d53-4a21-4878-b9b2-d20cf1625841",
            "actions": [
                {
                    "name": "MoveCharacter",
                    "type": "Button",
                    "id": "bcd8cee3-0fcd-4fef-9d7a-f84bb78264c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "b91b3c90-0af2-4843-a9d4-2e3674d31975",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a33d6f71-7a44-4069-822f-9e9787244914",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=1.401298E-45,pressPoint=1.401298E-45)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38169a06-5635-4731-a838-d2d8f218992a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}